# vtk-ci-example

./: .gitlab-ci.yml  CMakeLists.txt  License.txt  README.md
.github/workflows/: ci.yml
Data/: dragon.vtp
vtkModuleCI/Filter1/: CMakeLists.txt  vtk.module  vtkFilter1.cxx  vtkFilter1.h
vtkModuleCI/Filter1/Testing/: CMakeLists.txt  TestFilter1.cxx  execute_Filter1.py
